--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@ body{
     height: 100vh;
 }
 .container{
-    width: 150px;
-    height: 150px;
+    width: 180px;
+    height: 180px;
     background: #185AD8;
     color: white;
     display: flex;
     justify-content: center;
+    box-shadow: 0 0 8px #333333;
     align-items: center;
     flex-direction: column;
     position: relative;
@@ -30,8 +31,8 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 button{
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     position: absolute;
     cursor: pointer;
     font-size: 1.2em;
